--- a/style.css
+++ b/style.css
@@ -5,4 +5,4 @@ h3 {color: indianred;}
   label {font-size: 15px; font-weight: bold;}
   input {background-color: yellow;}
   textarea {background-color: ivory;}
-}}
+}
